# age_prediction_tf_proba

./: README.md
age-distribution/: Dockerfile  pyproject.toml
age-distribution/age_model/: __init__.py  bayesian_cnn.py  bayesian_layers.py  bayesian_resnet50.py  losses.py  metrics.py  resnet50.py
age-distribution/tests/: test_bayesian_cnn.py  test_bayesian_resnet50.py
buildspec/: apply-buildspec.yaml  build-age-distribution-buildspec.yaml  deploy-codeartifact-buildspec.yaml  deploy_model.yaml  plan-buildspec.yaml
iac/: codeartifact.tf  ecr.tf  iam.tf  networking.tf  pipeline.tf  s3.tf  state.tf  terraform.tfvars  variables.tf
model_deployment/: Dockerfile  model_logic.py  predictor.py  pyproject.toml  serve  train
notebooks/: build on age.ipynb  build on mnist.ipynb  vanilla_resnet50.ipynb
