[tool.poetry]
name = "model_deployment"
version = "0.1.0"
description = "Contains training and serving code for the packaged model."
authors = ["gtregoat <tregoat.gabriel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
